--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
     <div>
       signin
       <input type="text" id="signin-username" placeholder="Username" />
-      <input type="text" id="signin-password" placeholder="Password" />
+      <input type="password" id="signin-password" placeholder="Password" />
       <button id="signin" onclick="signin()">submit</button>
     </div>
     <div>
