--- a/public/index.html
+++ b/public/index.html
@@ -77,7 +77,7 @@
     <div>
       signup
       <input type="text" id="signup-username" placeholder="Username" />
-      <input type="text" id="signup-password" placeholder="Password" />
+      <input type="password" id="signup-password" placeholder="Password" />
       <button id="signup" onclick="signup()">submit</button>
     </div>
     <div>
